--- a/css/style.css
+++ b/css/style.css
@@ -41,3 +41,10 @@ body {
     margin: 0px auto;
     padding: 50px 0px 50px;
 }
+
+.tab-content {
+    border-left: 1px solid #ddd;
+    border-right: 1px solid #ddd;
+    border-bottom: 1px solid #ddd;
+    padding: 10px;
+}
