--- a/css/styles.scss
+++ b/css/styles.scss
@@ -74,3 +74,15 @@ body{
     bottom: 0px;
     z-index: 1;
 }
+
+.modal-header {
+    background: $background-dark;
+    color: $lt-gray;
+    .close {
+        color: $lt-gray;
+    }
+}
+
+.modal-body {
+    background: $background-pale;
+}
